Removing the meta files AND adding them to .gitignore, hope they never appear again.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .DS_Store
 Initiation_clone_*
+Initiation/Assets/LowPolyDungeonsLite/LowPolyDungeonsLite_HDRP_2018.4.unitypackage.meta
+Initiation/Assets/LowPolyDungeonsLite/LowPolyDungeonsLite_LWRP_2018.4.unitypackage.meta
+Initiation/Assets/LowPolyDungeonsLite/LowPolyDungeonsLite_URP_2019.3.unitypackage.meta
